# OCR-Text-Analysis-API

./: Dockerfile  README.md  config.py  docker-compose.yml  main.py  pyproject.toml
app/api/: analyze.py
app/core/: redis_config.py
app/utils/: cache_helpers.py  data_extraction.py  data_types.py  ocr.py
app/validation/: valid_credit_card.py  valid_date.py  valid_domain.py  valid_email.py  valid_id_number.py  valid_phone_number.py
